# FootballAnalytics

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.streamlit  FREE_HOSTING_SETUP.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-streamlit.txt  requirements.txt  start.sh  stop.sh  streamlit_app.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  injury-update.yml  keep-alive.yml  odds-refresh.yml  results-update.yml  weekly-analysis.yml  weekly-update.yml
.streamlit/: config.toml  secrets.toml.example
.streamlit/static/: manifest.json
app/: main.py
app/core/: config.py
app/db/: database.py  models.py
app/schemas/: match.py  team.py  value_bet.py
batch/ai/: narrative_generator.py
batch/analysis/: RECALIBRATION_FIX_SUMMARY.md  __init__.py  comprehensive_validation.py  ensemble_evaluation.py  fpl_enhanced_evaluation.py  fpl_ensemble_evaluation.py  pi_dixon_coles_backtest.py  pi_rating_backtest.py  recalibration_evaluation.py  regression_aware_evaluation.py  season_diagnosis.py  xg_evaluation.py  zip_ensemble_evaluation.py  zip_evaluation.py
batch/betting/: backtest.py  era_detection.py  kelly_criterion.py  reliability_state.json  value_calculator.py  value_detector.py
batch/data_sources/: football_data_org.py  fpl.py  historical_odds.py  injuries.py  the_odds_api.py  tipster_aggregator.py  understat.py
batch/jobs/: backfill_consensus.py  backfill_neural.py  backfill_new_models.py  backfill_predictions.py  backfill_strategy_ids.py  backfill_team_stats.py  backfill_value_bets.py  build_pi_ratings.py  (+26 more)
docs/: DEPLOYMENT.md
functions/: requirements.txt
infra/: main.bicep
pages/: 1_📅_Fixtures.py  2_📊_Poisson_Model.py  3_📈_ELO_Ratings.py  4_💰_Performance.py  5_🤖_Model_Training.py  6_📊_Historical_Results.py  7_📈_Strategy_Monitoring.py  8_🔍_Match_Details.py  9_📊_Stats_Dashboard.py
scripts/: Home.py  auth.py  backtest_calibrated.py  backtest_final.py  backtest_simple.py  backtest_value_bets.py  dashboard.py  db_init.py  elo_dashboard.py  fixtures_dashboard.py  plot_elo.py  plot_poisson.py  poisson_dashboard.py  pwa.py
tests/: conftest.py
(+69 files in other folders)
